# apple-mail-summary-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/apple_mail_mcp/: processor.py  server.py
src/apple_mail_summary_mcp/: email_client.py  server.py
