[project]
name = "apple-mail-mcp"
version = "0.1.0"
description = "MCP Server for interacting with Apple Mail and processing academic papers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mail_mcp"]
