[project]
name = "apple-mail-summary-mcp"
version = "0.1.0"
description = "A General MCP Server for interacting with Apple Mail on macOS, with optional academic paper processing tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
apple-mail-summary-mcp = "apple_mail_summary_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_mail_summary_mcp"]
